--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,14 @@
+
+<DOCTYPE html> 
+<html lang=""en>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <title>Temperature Converter</title>
+    <link rel="stylesheet" href="css/style.css">
+
+</head>
+<body>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />   
 
 <div class="container">
@@ -25,3 +36,6 @@
         </div>
 
     </div>
+    <script src="/js/app.js"></script>
+</body>
+    </html>
